# otr-processor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  env_example  rustfmt.toml
.github/: CODEOWNERS  release.yml
.github/workflows/: ci.yml  deploy-trigger.yml  deploy.yml  release-discord.yml
benches/: calc_rating.rs  global_country_rank.rs  match_processing.rs
src/: api.rs  args.rs  constants.rs  env.rs  lib.rs  main.rs  not_forget.txt
src/api/: api_structs.rs  error.rs  mod.rs
src/database/: db.rs  db_structs.rs  mod.rs
src/db/: db_client.rs
src/messaging/: config.rs  mod.rs  publisher.rs  tests.rs
src/model/: constants.rs  data_processing.rs  db.rs  db_structs.rs  decay.rs  mod.rs  model.rs  otr_model.rs  rating_tracker.rs  rating_utils.rs  recalc_helpers.rs
src/model/structures/: Mode.rs  PlayerRating.rs  match_cost.rs  match_type.rs  match_verification_status.rs  mod.rs  mode.rs  player_rating.rs  processing.rs  rating_adjustment_type.rs  rating_calculation_result.rs  ruleset.rs  scoring_type.rs  team_type.rs
src/models/: mod.rs
src/utils/: mod.rs  progress_utils.rs  test_utils.rs
test_data/: country_mapping.json  match_2v2.json  owc_2023.json  owc_2023_players.json
tests/: integration_tests.rs
tests/common/: mod.rs
tests/database/: crash_simulation_tests.rs  db_tests.rs  mod.rs  schema.sql  test_helpers.rs  transaction_tests.rs
tests/integration/: main_flow_tests.rs  mod.rs
