[package]
name = "otr-data-processor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "otr_processor"
path = "src/lib.rs"

[[bin]]
name = "otr-processor-cli"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
indicatif = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = {  version = "0.4.33", features = ["serde"] }
openskill = "0.0.1"
serde_repr = "0.1.18"
lazy_static = "1.4.0"
itertools = "0.12.1"
indexmap = "2.2.6"
approx = "0.5.1"
strum = "0.26.3"
strum_macros = "0.26.4"
criterion = "0.5.1"
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
postgres-types = "0.2.7"
rand_chacha = "0.3.1"
rand = "0.8.5"
thiserror = "1.0.56"
log = "0.4.22"

[dev-dependencies]
criterion = {  version = "0.5.1", features = ["html_reports"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[profile.release]
debug = true
