[package]
name = "otr-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "otr_processor"
path = "src/lib.rs"

[[bin]]
name = "otr-processor"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
indicatif = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = {  version = "0.4.33", features = ["serde"] }
openskill = "0.0.1"
serde_repr = "0.1.18"
lazy_static = "1.4.0"
itertools = "0.14.0"
indexmap = "2.2.6"
approx = "0.5.1"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
postgres-types = "0.2.7"
rand_chacha = "0.9.0"
rand = "0.9.1"
thiserror = "2.0.12"
env_logger = "0.11.6"
clap = { version = "4.5.37", features = ["derive", "env"] }
log = "0.4.22"
bytes = "1.10.1"
futures = "0.3.31"
lapin = "2.3.1"
serde_json = "1.0.114"
uuid = { version = "1.7", features = ["serde", "v4"] }

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
serial_test = "3.0"

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[profile.release]
debug = true
